Old render result from viewport render in camera view does not go away when middle clicking #41137

Closed
opened 2014-07-22 09:12:44 +02:00 by gandalf3 · 8 comments
Member

System Information
Archlinux

Blender Version
Broken: 2.71

Short description of error
When middle clicking (not dragging) in camera view with viewport render enabled, the old render remains visible.

This is fine when border render is not enabled, but it looks unexpected if it is.

Exact steps for others to reproduce the error

  1. Open camera_and_border_render_mmb.blend
  2. Enable rendered view
  3. Middle click (without dragging)
**System Information** Archlinux **Blender Version** Broken: 2.71 **Short description of error** When middle clicking (not dragging) in camera view with viewport render enabled, the old render remains visible. This is fine when border render is not enabled, but it looks unexpected if it is. **Exact steps for others to reproduce the error** 1. Open [camera_and_border_render_mmb.blend](https://archive.blender.org/developer/F98932/camera_and_border_render_mmb.blend) 2. Enable rendered view 3. Middle click (without dragging)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @gandalf3

Added subscriber: @gandalf3

Added subscriber: @Sergey

Added subscriber: @Sergey

Added subscriber: @SeanAitken

Added subscriber: @SeanAitken

This appears to happen only while Cycles is actively rendering. I changed the preview sample count from 0 (unlimited) to 20. Once the integration/rendering completes, this doesn't happen.

This appears to happen only while Cycles is actively rendering. I changed the preview sample count from 0 (unlimited) to 20. Once the integration/rendering completes, this doesn't happen.

This issue was referenced by 354b17d2f3

This issue was referenced by 354b17d2f3ff6e1b1c01fe147c2934103c8abef1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 354b17d2f3.

Closed by commit 354b17d2f3.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41137
No description provided.