Fix T41137: Old render result from viewport render in camera view does not go away when middle clicking